[package]
name = "bambulab-mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
#rumqttc = { git="https://github.com/bytebeamio/rumqtt.git", package = "rumqttc", features = ["use-native-tls"]}
rumqttc-dev-patched = {version="0.24.6-ack-notify", features = ["use-native-tls"]}
native-tls = "0.2.12"
nanoid = "=0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
