[package]
name = "bambulab-mqtt"
version = "0.1.1"
edition = "2024"
authors = ["Rui Kobayashi <roboroborx782@gmail.com>"]
description = "A simple MQTT client for Bambu Lab printers"
homepage = "https://github.com/KobayashiRui/bambulab-mqtt"
repository = "https://github.com/KobayashiRui/bambulab-mqtt"
license = "Apache-2.0"

[dependencies]
#rumqttc = { git="https://github.com/bytebeamio/rumqtt.git", package = "rumqttc", features = ["use-native-tls"]}
rumqttc-dev-patched = {version="0.24.6-ack-notify", features = ["use-native-tls"]}
native-tls = "0.2.12"
nanoid = "=0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
